backend/vulnerability_analysis/testing/oob1/full/klee-out-0/messages.txt
KLEE: Using STP solver backend
KLEE: SAT solver: MiniSat
KLEE: Deterministic allocator: Using quarantine queue size 8
KLEE: Deterministic allocator: globals (start-address=0x7f0b5ba00000 size=10 GiB)
KLEE: Deterministic allocator: constants (start-address=0x7f08dba00000 size=10 GiB)
KLEE: Deterministic allocator: heap (start-address=0x7e08dba00000 size=1024 GiB)
KLEE: Deterministic allocator: stack (start-address=0x7de8dba00000 size=128 GiB)
KLEE: ERROR: final_tc/oob1_klee.c:49: memory error: out of bound pointer
KLEE: NOTE: now ignoring this error at this location
KLEE: ERROR: final_tc/oob1_klee.c:47: memory error: out of bound pointer
KLEE: NOTE: now ignoring this error at this location
KLEE: ERROR: libc/string/strlen.c:22: memory error: out of bound pointer
KLEE: NOTE: now ignoring this error at this location
KLEE: halting execution, dumping remaining states
